# investment_copilot

./: .env.example  .gitignore  LICENSE  README.md  config.example.yaml  portfolio.example.yaml  portfolio.yaml.bak  pyproject.toml  streamlit_app.py  watchlist.example.yaml  watchlist.yaml
.claude/: settings.local.json
docs/: _capture_analysis_screenshot.py  _capture_calendar_screenshot.py  _capture_monitoring_screenshot.py  _capture_rebalance_screenshot.py  _capture_screenshot.py  _capture_watchlist_screenshot.py
src/frontend/: InvestmentCopilot.tsx  index.html
src/frontend/src/: analysis.jsx  api.jsx  app.jsx  backtest.jsx  calendar.jsx  companyReport.jsx  icons.jsx  mockData.jsx  monitoring.jsx  portfolio.jsx  portfolioSwitcher.jsx  primitives.jsx  rebalance.jsx  reports.jsx  sidebar.jsx  watchlist.jsx
src/investment_copilot/: __init__.py  cli.py  orchestrator.py
src/investment_copilot/api/: __init__.py  adapters.py  deps.py  main.py  schemas.py
src/investment_copilot/config/: __init__.py  (+3 more)
tests/: test_backtest_engine.py  test_backtest_service.py  test_cli.py  test_config.py  test_container.py  test_copilot_service.py  test_data_service.py  test_encoding.py  test_groq_client.py  test_gui.py  test_logging.py  test_metrics.py  test_models.py  test_news_match.py  test_orchestrator.py  test_portfolio_loader.py  test_portfolio_models.py  test_portfolio_registry.py  test_portfolio_service.py  test_prompt_context.py  test_rebalance.py  test_report_service.py  test_rss_provider.py  test_stooq_provider.py  test_storage.py  test_strategies.py  test_yahoo_provider.py
(+58 files in other folders)
